--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ python:
   - "3.7-dev"
 
 install:
-  pip install -r requirements.txt
+  - pip install -r requirements.txt
 
 script:
-  - pytest
+  - py.test  --cov-report term --cov=tests/
 
 after_success:
   - codecov
