--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - py.test  --cov-report term --cov=tests/
+  - py.test  --cov-report term --cov=app/models
 
 after_success:
   - codecov
