--- a/requirements.txt
+++ b/requirements.txt
@@ -6,17 +6,22 @@ Click==7.0
 codecov==2.0.15
 coverage==4.5.3
 Flask==1.0.2
+flask-mongoengine==0.9.5
+Flask-WTF==0.14.2
 gunicorn==19.9.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.1
+mongoengine==0.17.0
 more-itertools==6.0.0
 pluggy==0.9.0
 py==1.8.0
+pymongo==3.7.2
 pytest==4.3.1
 pytest-cov==2.6.1
 requests==2.21.0
 six==1.12.0
 urllib3==1.24.1
 Werkzeug==0.15.1
+WTForms==2.2.1
