--- a/AndroidClient/Hypechat/app/src/main/AndroidManifest.xml
+++ b/AndroidClient/Hypechat/app/src/main/AndroidManifest.xml
@@ -4,21 +4,23 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RegistroActivity"
-                android:windowSoftInputMode="stateAlwaysHidden"></activity>
+        <activity android:name=".ProfileActivity"></activity>
+        <activity
+            android:name=".RegistroActivity"
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login"
-            android:windowSoftInputMode="stateUnchanged"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:windowSoftInputMode="stateUnchanged">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.hypechat.MainActivity" />
