--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "create-react-class": "^15.6.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "recharts": "^1.6.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
   }
