--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - py.test  --cov-report term --cov=app/models --cov=app/controllers --cov=app/exceptions
+  - py.test  --cov-report term --cov=app/models --cov=app/controllers --cov=app/exceptions --cov=app/decorators
 
 after_success:
   - codecov
