--- a/AndroidClient/Hypechat/app/src/main/AndroidManifest.xml
+++ b/AndroidClient/Hypechat/app/src/main/AndroidManifest.xml
@@ -6,14 +6,15 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".cookies.ApplicationContextProvider"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:name=".cookies.ApplicationContextProvider"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".PasswordRestoreActivity"></activity>
+        <activity android:name=".ProfileActivity" />
         <activity
             android:name=".RegistroActivity"
             android:windowSoftInputMode="stateAlwaysHidden" />
