--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Click==7.0
 codecov==2.0.15
 coverage==4.5.3
 cryptography==2.6.1
+facebook-sdk==3.1.0
 Flask==1.0.2
 flask-mongoengine==0.9.5
 Flask-WTF==0.14.2
