--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ facebook-sdk==3.1.0
 Flask==1.0.2
 flask-mongoengine==0.9.5
 Flask-WTF==0.14.2
+firebase-admin==2.17.0
 gunicorn==19.9.0
 idna==2.8
 isort==4.3.17
