--- a/AndroidClient/Hypechat/app/build.gradle
+++ b/AndroidClient/Hypechat/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
@@ -28,6 +27,9 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.google.firebase:firebase-auth:16.0.3'
     implementation 'com.google.firebase:firebase-core:16.0.3'
+
+
+    implementation 'com.google.firebase:firebase-messaging:17.3.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -44,3 +46,5 @@ dependencies {
     //fb
     implementation 'com.facebook.android:facebook-android-sdk:4.+'
 }
+
+apply plugin: 'com.google.gms.google-services'
