--- a/AndroidClient/Hypechat/app/build.gradle
+++ b/AndroidClient/Hypechat/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -46,6 +47,14 @@ dependencies {
     //fb
     implementation 'com.facebook.android:facebook-android-sdk:4.+'
     implementation 'com.obsez.android.lib.filechooser:filechooser:1.1.10'
+
+    implementation 'com.google.android.gms:play-services:12.0.1'
+
+    implementation 'com.google.android.gms:play-services-location:15.0.0'
+    implementation 'com.google.android.gms:play-services-maps:15.0.0'
+    implementation 'com.google.android.gms:play-services-places:15.0.0'
+
+    implementation 'com.android.support:multidex:1.0.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
